2009-12-13  Alberto Garcia  <agarcia@igalia.com>

	* debian/rules: Include gnome.mk from CDBS

2009-12-13  Alberto Garcia  <agarcia@igalia.com>

	* po/gl.po
	* po/pt.po: Minor translation fixes

2009-12-13  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.[ch]
	* src/uimisc.[ch]
	* src/uimisc.c
	* src/vgl-main-window.c
	* src/vgl-server.[ch]:
	New menu entry to import a config file with server info.

2009-12-13  Alberto Garcia  <agarcia@igalia.com>

	* Makefile.am
	* configure.ac:
	Use just 'Vagalume' in the 'Name' field of the vagalume.desktop
	file in Maemo 5, since longer names don't fit.

2009-12-13  Alberto Garcia  <agarcia@igalia.com>

	* src/http.c: Increase HTTP timeout

2009-12-13  Alberto Garcia  <agarcia@igalia.com>

	* src/uimisc.[ch]:
	(-flush_ui_events) Remove unused function

2009-12-11  Alberto Garcia  <agarcia@igalia.com>

	* debian/control.maemo[2345]:
	Update control files to use the new Vagalume icon

2009-12-11  Alberto Garcia  <agarcia@igalia.com>

	* debian/changelog:
	* configure.ac
	* NEWS: Updated for the upcoming v0.8 release

2009-12-10  Otto Krüja  <ottokrueja@gmx.net>

	* data/icons/*/*:
	Make the corners of the Vagalume icon rounded.

2009-12-03  Alberto Garcia  <agarcia@igalia.com>

	* src/main.c (main): Call hildon_gtk_init() in Maemo 5

2009-11-20  Amador Loureiro Blanco  <dorfun@adorfunteca.org>

	* po/gl.po: Updated Galician translation.

2009-11-18  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c (vgl_main_window_init):
	Add a border to the contents of the main window excluding the menu
	bar.

2009-11-18  Alberto Garcia  <agarcia@igalia.com>

	* src/audio.c (get_audio_thread, gst_eos_handler, bus_call):
	Change method use to compute the number of failed tracks.

2009-11-18  Alberto Garcia  <agarcia@igalia.com>

	* src/http.c (+create_curl_handle, http_get_to_fd)
	(http_download_file, http_get_buffer, http_post_buffer):
	Set a connection timeout to all HTTP calls.
	Prevent CURL from emitting signals.
